force-app/main/default/objects/Qualification__c/Qualification__c.object-meta.xml
<CustomObject>
    <label>Qualification</label>
    <nameField>
        <displayFormat>QF-{0000}</displayFormat>
        <label>Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>