force-app/main/default/objects/Qualification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Qualifications</relationshipLabel>
    <relationshipName>Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>