force-app/main/default/objects/Qualification__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <description>Primary Product selected during Qualification - This gets mapped to the Product__c Field on Leads</description>
    <label>Primary Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>