force-app/main/default/objects/Qualification__c/fields/Total_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate__c</fullName>
    <label>Total Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>